--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                         <a href="404.html" class="dropdown-item">Optimasi Sosial Media</a>
                     </div>
                 </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                <a href="contact.html" class="nav-item nav-link">Kontak</a>
             </div>
-            <a href="" class="btn btn-primary px-3 d-none d-lg-block">Get A Quote</a>
+            <a href="" class="btn btn-primary px-3 d-none d-lg-block">Order Sekarang</a>
         </div>
     </nav>
     <!-- Navbar End -->
