--- a/index.html
+++ b/index.html
@@ -107,11 +107,9 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-10 text-start">
-                                    <p class="fs-5 fw-medium text-primary text-uppercase animated slideInRight">25 Years
-                                        of Working Experience</p>
-                                    <h1 class="display-1 text-white mb-5 animated slideInRight">IT Solution
-                                        Providing Company</h1>
-                                    <a href="" class="btn btn-primary py-3 px-5 animated slideInRight">Explore More</a>
+                                    <p class="fs-5 fw-medium text-primary text-uppercase animated slideInRight"> <span style="color: rgb(244, 247, 87);">10 Tahun dalam Pengalaman Pengerjaan </span> </p>
+                                    <h1 class="display-1 text-white mb-5 animated slideInRight">Solusi Pengalaman IT </h1>
+                                    <a href="" class="btn btn-primary py-3 px-5 animated slideInRight">Jelajah Sekarang</a>
                                 </div>
                             </div>
                         </div>
@@ -123,11 +121,9 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-10 text-start">
-                                    <p class="fs-5 fw-medium text-primary text-uppercase animated slideInRight">25 Years
-                                        of Working Experience</p>
-                                    <h1 class="display-1 text-white mb-5 animated slideInRight">The Best Reliable
-                                        IT Solution</h1>
-                                    <a href="" class="btn btn-primary py-3 px-5 animated slideInRight">Explore More</a>
+                                    <p class="fs-5 fw-medium text-primary text-uppercase animated slideInRight"><span style="color: rgb(244, 247, 87);">10 Tahun dalam Pengalaman Pengerjaan</span></p>
+                                    <h1 class="display-1 text-white mb-5 animated slideInRight">Terbaik Dan Terpercaya Solusi IT</h1>
+                                    <a href="" class="btn btn-primary py-3 px-5 animated slideInRight">Jelajah Sekarang</a>
                                 </div>
                             </div>
                         </div>
@@ -476,7 +472,7 @@
                             </div>
                             <div class="position-relative overflow-hidden bg-light d-flex flex-column justify-content-center w-100 ps-4"
                                 style="height: 90px;">
-                                <h5>Rob Miller</h5>
+                                <h5>Rahmadani Fiqqih Wijaya</h5>
                                 <span class="text-primary">CEO & Founder</span>
                                 <div class="team-social">
                                     <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i
@@ -499,7 +495,7 @@
                             </div>
                             <div class="position-relative overflow-hidden bg-light d-flex flex-column justify-content-center w-100 ps-4"
                                 style="height: 90px;">
-                                <h5>Adam Crew</h5>
+                                <h5>Septian Hendriansyah</h5>
                                 <span class="text-primary">Project Manager</span>
                                 <div class="team-social">
                                     <a class="btn btn-square btn-dark rounded-circle mx-1" href=""><i
@@ -513,7 +509,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item">
                         <img class="img-fluid" src="img/team-3.jpg" alt="">
                         <div class="d-flex">
@@ -535,7 +531,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -606,10 +602,10 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-white mb-4">Our Office</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <h5 class="text-white mb-4">Kantor Kami</h5>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Jalan Muara Baru,Penjaringan,Jakarta Utara</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+62 831-5397-6390</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>Integrasitech@gmail.com</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i
                                 class="fab fa-twitter"></i></a>
@@ -623,29 +619,29 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
+                    <a class="btn btn-link" href="">Tentang Kami</a>
+                    <a class="btn btn-link" href="">Kontak Kami</a>
+                    <a class="btn btn-link" href="">Pelayanan</a>
+                    <!-- <a class="btn btn-link" href="">Terms & Condition</a> -->
                     <a class="btn btn-link" href="">Support</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-white mb-4">Business Hours</h5>
-                    <p class="mb-1">Monday - Friday</p>
-                    <h6 class="text-light">09:00 am - 07:00 pm</h6>
-                    <p class="mb-1">Saturday</p>
-                    <h6 class="text-light">09:00 am - 12:00 pm</h6>
-                    <p class="mb-1">Sunday</p>
+                    <h5 class="text-white mb-4">Jam Operasi</h5>
+                    <p class="mb-1">Senen - Jumat</p>
+                    <h6 class="text-light">09:00 Pagi - 07:00 Malam</h6>
+                    <p class="mb-1">Sabtu</p>
+                    <h6 class="text-light">09:00 Pagi - 12:00 Siang</h6>
+                    <p class="mb-1">Minggu</p>
                     <h6 class="text-light">Closed</h6>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Newsletter</h5>
                     <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
                     <div class="position-relative w-100">
-                        <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text"
-                            placeholder="Your email">
+                        <!-- <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text"
+                            placeholder="Your email"> -->
                         <button type="button"
-                            class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                            class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Daftar Sekarang</button>
                     </div>
                 </div>
             </div>
@@ -657,11 +653,11 @@
     <!-- Copyright Start -->
     <div class="container-fluid copyright bg-dark py-4">
         <div class="container text-center">
-            <p class="mb-2">Copyright &copy; <a class="fw-semi-bold" href="#">Your Site Name</a>, All Right Reserved.
+            <p class="mb-2">Copyright &copy; <a class="fw-semi-bold" href="#">Integrasi.Tech</a>, All Right Reserved.
             </p>
             <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-            <p class="mb-0">Designed By <a class="fw-semi-bold" href="https://htmlcodex.com">HTML Codex</a> Distributed
-                By: <a href="https://themewagon.com">ThemeWagon</a> </p>
+            <!-- <p class="mb-0">Designed By <a class="fw-semi-bold" href="https://htmlcodex.com">HTML Codex</a> Distributed
+                By: <a href="https://themewagon.com">ThemeWagon</a> </p> -->
         </div>
     </div>
     <!-- Copyright End -->
