--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+    <!-- live chat -->
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-935349cd-96ad-488a-a5ef-bcea139d375f"></div>
 </head>
 
 <body>
@@ -107,7 +111,7 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-10 text-start">
-                                    <p class="fs-5 fw-medium text-primary text-uppercase animated slideInRight"> <span style="color: rgb(244, 247, 87);">10 Tahun dalam Pengalaman Pengerjaan </span> </p>
+                                    <p class="fs-5 fw-medium text-primary text-uppercase animated slideInRight"> <span style="color: rgb(244, 247, 87);">10 Tahun dalam Pengalaman Pengerjaan IT</span> </p>
                                     <h1 class="display-1 text-white mb-5 animated slideInRight">Solusi Pengalaman IT </h1>
                                     <a href="" class="btn btn-primary py-3 px-5 animated slideInRight">Jelajah Sekarang</a>
                                 </div>
@@ -121,7 +125,7 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-10 text-start">
-                                    <p class="fs-5 fw-medium text-primary text-uppercase animated slideInRight"><span style="color: rgb(244, 247, 87);">10 Tahun dalam Pengalaman Pengerjaan</span></p>
+                                    <p class="fs-5 fw-medium text-primary text-uppercase animated slideInRight"><span style="color: rgb(244, 247, 87);">10 Tahun dalam Pengalaman Pengerjaan IT</span></p>
                                     <h1 class="display-1 text-white mb-5 animated slideInRight">Terbaik Dan Terpercaya Solusi IT</h1>
                                     <a href="" class="btn btn-primary py-3 px-5 animated slideInRight">Jelajah Sekarang</a>
                                 </div>
@@ -158,23 +162,26 @@
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <p class="fw-medium text-uppercase text-primary mb-2">About Us</p>
-                    <h1 class="display-5 mb-4">We Are Leader In IT Market</h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et
-                        eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet
+                    <!-- <p class="fw-medium text-uppercase text-primary mb-2">About Us</p> -->
+                    <h1 class="display-5 mb-4">Hallo pemilik Bisnis Jasa UMKM.....
+                        Mau bisnismu muncul di Halaman Google ??</h1>
+                    <p class="mb-4 text-danger -bold">KAMU BISA
+                        TINGKATKAN OMSET
+                        HINGGA 10 KALI LIPAT
+                        DENGAN LANDING PAGE
                     </p>
                     <div class="d-flex align-items-center mb-4">
                         <div class="flex-shrink-0 bg-primary p-4">
-                            <h1 class="display-2">25</h1>
-                            <h5 class="text-white">Years of</h5>
-                            <h5 class="text-white">Experience</h5>
+                            <h1 class="display-2">10</h1>
+                            <h5 class="text-white">10 Tahun dalam</h5>
+                            <h5 class="text-white">bidang IT</h5>
                         </div>
                         <div class="ms-4">
-                            <p><i class="fa fa-check text-primary me-2"></i>Power & Energy</p>
-                            <p><i class="fa fa-check text-primary me-2"></i>Civil Engineering</p>
-                            <p><i class="fa fa-check text-primary me-2"></i>Chemical Engineering</p>
-                            <p><i class="fa fa-check text-primary me-2"></i>Mechanical Engineering</p>
-                            <p class="mb-0"><i class="fa fa-check text-primary me-2"></i>Oil & Gas Engineering</p>
+                            <p><i class="fa fa-check text-primary me-2"></i>Membuat Website Responsive dan Stabil</p>
+                            <p><i class="fa fa-check text-primary me-2"></i>Meningkatkan Trafik Website</p>
+                            <p><i class="fa fa-check text-primary me-2"></i>Mengoptimalkan Sosial Media</p>
+                            <p><i class="fa fa-check text-primary me-2"></i>Desain Modern</p>
+                            <p class="mb-0"><i class="fa fa-check text-primary me-2"></i>Harga Terjangkau</p>
                         </div>
                     </div>
                     <div class="row pt-2">
@@ -184,8 +191,8 @@
                                     <i class="fa fa-envelope-open text-white"></i>
                                 </div>
                                 <div class="ms-3">
-                                    <p class="mb-2">Email us</p>
-                                    <h5 class="mb-0">info@example.com</h5>
+                                    <p class="mb-2">Email</p>
+                                    <h5 class="mb-0">Integrasitech.com</h5>
                                 </div>
                             </div>
                         </div>
@@ -195,8 +202,8 @@
                                     <i class="fa fa-phone-alt text-white"></i>
                                 </div>
                                 <div class="ms-3">
-                                    <p class="mb-2">Call us</p>
-                                    <h5 class="mb-0">+012 345 6789</h5>
+                                    <p class="mb-2">Hubungi kami</p>
+                                    <h5 class="mb-0">+62 831-5397-6390</h5>
                                 </div>
                             </div>
                         </div>
@@ -261,11 +268,11 @@
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <p class="fw-medium text-uppercase text-primary mb-2">Why Choosing Us!</p>
-                    <h1 class="display-5 mb-4">Few Reasons Why People Choosing Us!</h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et
+                    <p class="fw-medium text-uppercase text-primary mb-2">Kenapa memilih Kami!</p>
+                    <h1 class="display-5 mb-4">Beberapa Alasan Banyak yang Memilih Kami!</h1>
+                    <!-- <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et
                         eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet
-                    </p>
+                    </p> -->
                     <div class="row gy-4">
                         <div class="col-12">
                             <div class="d-flex">
@@ -273,9 +280,8 @@
                                     <i class="fa fa-check text-white"></i>
                                 </div>
                                 <div class="ms-4">
-                                    <h4>Experienced Workers</h4>
-                                    <span>Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna
-                                        dolore erat amet</span>
+                                    <h4>Tampilan Menarik</h4>
+                                    <span>Tampilan dari penawaran produk Anda menjadi lebih menarik dan berkonversi tinggi</span>
                                 </div>
                             </div>
                         </div>
@@ -285,9 +291,8 @@
                                     <i class="fa fa-check text-white"></i>
                                 </div>
                                 <div class="ms-4">
-                                    <h4>Reliable Industrial Services</h4>
-                                    <span>Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna
-                                        dolore erat amet</span>
+                                    <h4>Biaya Terjangkau</h4>
+                                    <span>Biaya pembuatan Landing Page sangat terjangkau jika dibanding manfaat yang akan Anda dapatkan</span>
                                 </div>
                             </div>
                         </div>
@@ -298,8 +303,7 @@
                                 </div>
                                 <div class="ms-4">
                                     <h4>24/7 Customer Support</h4>
-                                    <span>Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna
-                                        dolore erat amet</span>
+                                    <span>Calon klien dapat melihat dan mempelajari produk Anda kapanpun mereka mau</span>
                                 </div>
                             </div>
                         </div>
@@ -405,7 +409,6 @@
         </div>
     </div>
     <!-- Service End -->
-
 
     <!-- Project Start -->
     <div class="container-fluid bg-dark pt-5 my-5 px-0">
